Fixed some color & spacing issues

--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -20,33 +20,32 @@
     }
     h4 {
         margin-bottom: 20px;
+        font-size: 1.1rem;
     }
     p {
         padding: 15px 19px;
-        color: $white !important;
-        background-color: rgb($black, 0.3);
         transform: scaleX(1.1);
     }
 
     &__project {
         width: 28%;
-        margin: 10px;
+        margin: 20px;
         padding: 20px;
         overflow: hidden;
         @include gradient(to bottom, 0.15);
        
         &:hover .portfolio-container__external-links  {
-                display: block;
-                width: 100%;
-                height: 110%;
-                position: absolute;                
-                left: 0;
-                background-color: rgb($primary, 0.3);
-                transform: scaleX(1.1);
-                @include flexbox(space-around);
-                @include animation(800ms) {
-                    0% {top: 100%;}
-                    100% { top:0%;};
+            display: block;
+            width: 100%;
+            height: 110%;
+            position: absolute;
+            left: 0;
+            background-color: rgb($primary, 0.3);
+            transform: scaleX(1.1);
+            @include flexbox(space-around);
+            @include animation(800ms) {
+                0% {top: 100%;}
+                100% { top:0%;};
             }
             a {
                 @include custom-btn(130px);
